# rustg

./: Cargo.toml
src/: main.rs  point.rs
